V 
* features
- 
* bug fixes
-

V 
* features
- save current config on change
- cache for DB
* bug fixes
- fix cancel editor if inserting
- fix force close in configuration autoloading 

V 2.5.0
* features
- enable/disable cpus (for mulitcore devices and still a beta feature)
* bug fixes
- fix apply virtual governor to profile
- apply to system after changing trigger, profile or governor

V 2.4.0
* features
- Use spinner to choose frequencies
* bug fixes
- Greek translation update
- fix jumping profile editor

V 2.3.2 
* features
- 
* bug fixes
- fix crash on start

V 2.3.1
* features
-
* bug fixes
- fixed crash on start bug (finally and hopefully)
- German translation update
- Italian translation update

V 2.3.0
* features
- handle multicore devices (beta feature)
* bug fixes
- autoload configuration does not get saved

V 2.2.3 
* features
- 
* bug fixes
- fix forcecloses

V 2.2.2
* features
- autoload based on weekdays 
- delete autoload configurations
- fix trigger list layout with long profile names
* bug fixes
- fix force close in autoload editor

V 2.2.1
* features
- 
* bug fixes
- really do exact scheduling
- fix profile editor layout
- fixed force close in autoload editor 

V 2.2.0
* features
- time-specific configurations (autoloading configurations)
- backup/restore settings to cloud
- log profile and configuration switching
* bug fixes
-

V 2.1.3
* features
- 
* bug fixes
- give the smartass governor a max frequency slider back

V 2.1.2
* features
- basic help page for configurations
* bug fixes
- some devices seem the need the vibrate permission .oO(strange...)
- prevent errors while switching profiles

V 2.1.1
* features
- 
* bug fixes
- disable debug mode

V 2.1.0
* features
- configurations: backup/restore
- switch airplane mode (the ultimate battery saver - wait for 2.2 then it will make more sense)
* bug fixes
-

V 2.0.7
* features
- 
* bug fixes
- fix force close

V 2.0.6
* features
- 
* bug fixes
- fix forceclose

V 2.0.5
* features